--- a/app/src/main/res/layout/activity_guru.xml
+++ b/app/src/main/res/layout/activity_guru.xml
@@ -2,104 +2,103 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_gravity="center_vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GuruActivity">
 
-    <ScrollView
+    <LinearLayout
+        android:background="#2196F3"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="300dp">
 
-        <GridLayout
-            android:id="@+id/mainGrid"
+        <TextView
+            android:textColor="@color/white"
+            android:textSize="45dp"
+            android:textStyle="italic"
+            android:gravity="center"
+            android:text="GURU DAN STAF"
+            android:layout_width="match_parent"
+            android:layout_height="255dp">
+        </TextView>
+
+
+    </LinearLayout>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="135dp"
+        android:layout_height="125dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="250dp"
+        app:cardCornerRadius="10dp">
+
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="5dp"
+            android:src="@drawable/guru"
+            android:onClick="menuguru"/>
+    </android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView
+        android:layout_width="135dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="380dp"
+        android:layout_marginRight="12dp"
+        app:cardCornerRadius="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="9"
-            android:alignmentMode="alignMargins"
-            android:columnCount="1"
-            android:columnOrderPreserved="false"
-            android:rowCount="4"
-            tools:targetApi="ice_cream_sandwich">
+            android:layout_marginTop="4dp"
+            android:text="GURU"
+            android:textColor="#000"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </android.support.v7.widget.CardView>
 
+    <android.support.v7.widget.CardView
+        android:layout_width="135dp"
+        android:layout_height="125dp"
+        android:layout_marginLeft="210dp"
+        android:layout_marginTop="250dp"
+        app:cardCornerRadius="10dp">
 
-            <android.support.v7.widget.CardView
-                android:layout_width="135dp"
-                android:layout_height="125dp"
-                android:layout_marginLeft="100dp"
-                android:layout_marginTop="10dp"
-                app:cardCornerRadius="10dp">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="5dp"
+            android:src="@drawable/staff"
+            android:onClick="staff"/>
+    </android.support.v7.widget.CardView>
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/guru" />
+    <android.support.v7.widget.CardView
+        android:layout_width="135dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="210dp"
+        android:layout_marginTop="380dp"
+        android:layout_marginRight="12dp"
+        app:cardCornerRadius="10dp">
 
-            </android.support.v7.widget.CardView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="4dp"
+            android:text="STAF"
+            android:textColor="#000"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView
-                android:layout_width="135dp"
-                android:layout_height="20dp"
-                android:layout_marginLeft="100dp"
-                android:layout_marginTop="1dp"
-                app:cardCornerRadius="10dp">
-
-            <TextView
-                android:layout_marginLeft="50dp"
-                android:textStyle="bold"
-                android:textSize="12dp"
-                android:text="GURU"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </TextView>
-
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="135dp"
-                android:layout_height="125dp"
-                android:layout_marginLeft="100dp"
-                android:layout_marginTop="10dp"
-                app:cardCornerRadius="10dp">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/guru" />
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="135dp"
-                android:layout_height="20dp"
-                android:layout_marginLeft="100dp"
-                android:layout_marginTop="1dp"
-                app:cardCornerRadius="10dp">
-
-                <TextView
-                    android:layout_marginLeft="50dp"
-                    android:textStyle="bold"
-                    android:textSize="12dp"
-                    android:text="STAF"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                </TextView>
-
-
-            </android.support.v7.widget.CardView>
-
-
-        </GridLayout>
-
-    </ScrollView>
 
 </RelativeLayout>
